namespace PCConfigurator.Model.Components;

public enum NandType
{
    SLC,
    MLC,
    TLC,
    QLC
}
